--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,10 @@ name = "openai-workers-relay"
 main = "src/index.ts"
 compatibility_date = "2024-10-10"
 
+[observability.logs]
+enabled = true
+
+
 # This will deploy the project by default to openai-workers-relay.<username>.workers.dev. 
 # You can modify this by changing the name of the project in wrangler.toml, 
 # and/or setting the `routes` param in this file. Learn more at 
