--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "@openai/realtime-api-beta": "github:openai/openai-realtime-api-beta"
+    "openai-realtime-api-beta": "github:michitomo/openai-realtime-api-beta"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241112.0",
